Update code for jdk22 (adds jnetpcap sources)