@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.corebounce.nova</groupId>
@@ -14,25 +14,21 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jdk.version>21</jdk.version>
+        <jdk.version>22</jdk.version>
         <maven.compiler.release>${jdk.version}</maven.compiler.release>
         <java.encoding>UTF-8</java.encoding>
-        <java.preview>--enable-preview</java.preview>
         <java.native>--enable-native-access=ALL-UNNAMED</java.native>
         <exec.mainClass>org.corebounce.nova.NOVAControl</exec.mainClass>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.6.2</version>
-        </dependency>
+        <!--
         <dependency>
             <groupId>com.slytechs.jnet.jnetpcap</groupId>
             <artifactId>jnetpcap-wrapper</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.1-SNAPSHOT</version>
         </dependency>
+        -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -45,16 +41,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.13.0</version>
                 <configuration>
-                    <release>21</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>22</release>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.5.3</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
